--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,10 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/OnlinePharmacyWIP
 endorsed.classpath=
 excludes=
 file.reference.db4o-8.0.276.16149-all-java5.jar=db4o-8.0.276.16149-all-java5.jar
+file.reference.javax.mail.jar=javax.mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.db4o-8.0.276.16149-all-java5.jar}
+    ${file.reference.db4o-8.0.276.16149-all-java5.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
